# MeetUp20220721

image-lambda-demo/: CMakeLists.txt  Speaker Notes AWS SDK for C++.md  black_and_white_lambda_demo.cpp  sepia_lambda_demo.cpp
image-lambda-demo/docker/: Dockerfile-OpenCV  Dockerfile-clang  Dockerfile-lambda-cpp  Dockerfile-sdk-cpp
image-lambda-demo/image-lambda-demo-cdk/: cdk.json  package.json
image-lambda-demo/image-lambda-demo-cdk/lib/: image-lambda-demo-cdk-infra-stack.ts  image-lambda-demo-cdk-stack.ts
image-lambda-demo/image-lambda-demo-cdk/test/: image-lambda-demo-cdk.test.ts
